kubernetes/dlp-reidentify-service.yaml
# Copyright 2017 Istio Authors
#
#   Licensed under the Apache License, Version 2.0 (the "License");
#   you may not use this file except in compliance with the License.
#   You may obtain a copy of the License at
#
#       http://www.apache.org/licenses/LICENSE-2.0
#
#   Unless required by applicable law or agreed to in writing, software
#   distributed under the License is distributed on an "AS IS" BASIS,
#   WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
#   See the License for the specific language governing permissions and
#   limitations under the License.

##################################################################################################
# DLP ReIdentify Service
##################################################################################################
apiVersion: v1
kind: Service
metadata:
  name: dlpreidentify
  labels:
    app: dlpreidentify
    visualize: 'true'
spec:
  ports:
  - port: 8080
    name: http
  selector:
    app: dlpreidentify
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    app: dlpreidentify-v1
    visualize: 'true'
  name: dlpreidentify-v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dlpreidentify
      visualize: 'true'
  template:
    metadata:
      annotations:
        prometheus.io/scrape: 'true'
        prometheus.io/path: '/actuator/prometheus'
        prometheus.io/port: '8080'
      labels:
        app: dlpreidentify
        version: v1
        visualize: 'true'
    spec:
     containers:
      - name: swarm-istio-dlp-reidentify-api
        image: gcr.io/scotia-tokenization/swarm-istio-dlp-reidentify-api:V1
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
---
