kubernetes/service-ingress.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: dlp-api-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: dlp-reidentify-api-v1
spec:
  hosts:
  - "*"
  gateways:
  - dlp-api-gateway
  http:
  - match:
    - uri:
        exact: /jpa/v1/customers
    route:
    - destination:
        host: dlpreidentify
        port:
          number: 8080
